--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="cell" data-cell></div>
     </div>
     <div class="winning-message" id="winning-message">
-        <div data-winning-message-text></div>
+        <div data-winning-message-text>X Wins!</div>
         <button id="restart-button">Restart</button>
     </div>
 </body>
