Align body to center

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="game-details">
+        <div class="players">
+            <span class="x-turn">X's Move</span>
+            <span class="o-turn">O's Move</span>
+        </div>
+    </div>
     <div class="board" id="board">
         <!-- data-cell: Custom HTML tag -->
         <div class="cell" data-cell></div>
