--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Tic Tac Toe</title>
+    <title>Tic Tac Toe - Paul</title>
     <!-- Execute script after page is loaded -->
     <script src="script.js" defer></script>
 </head>
