--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Tic Tac Toe - Paul</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Execute script after page is loaded -->
     <script src="script.js" defer></script>
 </head>
