--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Tic Tac Toe - Paul</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <!-- Execute script after page is loaded -->
     <script src="script.js" defer></script>
 </head>
@@ -36,6 +37,12 @@
         <div data-winning-message-text></div>
         <button id="restart-button">Restart</button>
     </div>
+    <footer>
+        <div class="copyright">
+            <p class="copyright-text">Copyright &copy; <a href="https://paul-ian.tk"><span class="author-name">Lim Paul Ian</span></a></p>
+            <a href="https://github.com/pauliand3138/admin-dashboard" target="_blank"><img src="images/github-icon-white.png" alt="github icon" class="github-icon"></a>
+        </div>
+    </footer>
 </body>
-
+    
 </html>
