Add header and svg background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <header>
+        <p class="app-title">Tic Tac Toe</p>
+        <img src="images/tic-tac-toe-white.png" alt="app icon" class="app-icon">
+    </header>
     <div class="game-details">
         <div class="players">
             <span class="x-turn">X's Turn</span>
@@ -40,7 +44,7 @@
     <footer>
         <div class="copyright">
             <p class="copyright-text">Copyright &copy; <a href="https://paul-ian.tk"><span class="author-name">Lim Paul Ian</span></a></p>
-            <a href="https://github.com/pauliand3138/admin-dashboard" target="_blank"><img src="images/github-icon-white.png" alt="github icon" class="github-icon"></a>
+            <a href="https://github.com/pauliand3138/tic-tac-toe" target="_blank"><img src="images/github-icon-white.png" alt="github icon" class="github-icon"></a>
         </div>
     </footer>
 </body>
