Add css design to winning message modal

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
     </div>
-    <div class="winning-message" id="winning-message">
-        <div data-winning-message-text></div>
-        <button id="restart-button">Restart</button>
+    <div class="winning-message show" id="winning-message">
+        <div class="winning-message-container">
+            <div data-winning-message-text>Draw</div>
+            <button id="restart-button">Restart</button>
+        </div>
     </div>
     <footer>
         <div class="copyright">
